addqrdetails
